// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accounts should match a snapshot with accounts 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Users
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <h2
            class="el-subtitle"
          >
            Support
          </h2>
          <p
            class="el-has-grey-text el-small-text"
          >
            Your first step is to provision a user account for the solution using the button below.
          </p>
          <p
            class="el-has-grey-text el-small-text"
          >
            Please see also below for more resources amd assistance.
          </p>
          <button
            class="el-mb5 el-intent-primary el-button"
          >
            Provision User
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            View Docs
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            Video
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            View Docs
            <div
              class="el-button-loader"
            />
          </button>
        </aside>
        <section
          class="el-page-container"
        >
          <h1
            class="el-title"
          >
            User Accounts
          </h1>
          <p
            class="el-has-grey-text el-body-text"
          >
            In order to access your organisations data warehouse, you must first create the user accounts to access it. You are to manage and create as many user accounts as you wish without any additional costs. We recommend that each individual user or application is provided with a unique set of credentials.
          </p>
          <p
            class="el-has-grey-text el-body-text"
          >
            Please note that creating the first user account is a long running process and can take several minutes to complete.
          </p>
          <h2
            class="el-subtitle"
          >
            User Account Details
          </h2>
          <div
            class="el-mb11 el-table"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="2"
          >
            <div
              class="el-table-headers-row"
            >
              <div
                class="el-table-header"
              >
                User Name
              </div>
              <div
                class="el-table-header"
              >
                Status
              </div>
              <div
                class="el-table-header"
              >
                <span
                  class="el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
            <div
              class="el-table-row-container"
            >
              <div
                class="el-table-row"
              >
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <span
                    class="el-intent-secondary el-icon"
                  >
                    <svg />
                  </span>
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="User Name"
                  >
                    hiyaall
                  </div>
                </div>
                <div
                  class="el-table-cell-has-dark-text el-table-cell"
                >
                  <div
                    class="el-table-cell-content"
                    data-narrow-label="Status"
                  >
                    User is active
                  </div>
                </div>
                <div
                  class="el-table-expandable-row-trigger-cell"
                >
                  <span
                    class="el-intent-secondary el-icon"
                  >
                    <svg />
                  </span>
                </div>
              </div>
              <div
                class="el-table-expandable-row"
              >
                <div
                  class="el-table-expandable-container"
                >
                  <div
                    class="el-button-group"
                  >
                    <div
                      class="el-button-group-align-center el-button-group-inner"
                    >
                      <button
                        class="el-intent-primary el-button"
                      >
                        Update
                        <div
                          class="el-button-loader"
                        />
                      </button>
                      <button
                        class="el-intent-danger el-button"
                      >
                        Deactivate
                        <div
                          class="el-button-loader"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Users
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <h2
          class="el-subtitle"
        >
          Support
        </h2>
        <p
          class="el-has-grey-text el-small-text"
        >
          Your first step is to provision a user account for the solution using the button below.
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Please see also below for more resources amd assistance.
        </p>
        <button
          class="el-mb5 el-intent-primary el-button"
        >
          Provision User
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          View Docs
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          Video
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          View Docs
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          User Accounts
        </h1>
        <p
          class="el-has-grey-text el-body-text"
        >
          In order to access your organisations data warehouse, you must first create the user accounts to access it. You are to manage and create as many user accounts as you wish without any additional costs. We recommend that each individual user or application is provided with a unique set of credentials.
        </p>
        <p
          class="el-has-grey-text el-body-text"
        >
          Please note that creating the first user account is a long running process and can take several minutes to complete.
        </p>
        <h2
          class="el-subtitle"
        >
          User Account Details
        </h2>
        <div
          class="el-mb11 el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="2"
        >
          <div
            class="el-table-headers-row"
          >
            <div
              class="el-table-header"
            >
              User Name
            </div>
            <div
              class="el-table-header"
            >
              Status
            </div>
            <div
              class="el-table-header"
            >
              <span
                class="el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
          <div
            class="el-table-row-container"
          >
            <div
              class="el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg />
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="User Name"
                >
                  hiyaall
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Status"
                >
                  User is active
                </div>
              </div>
              <div
                class="el-table-expandable-row-trigger-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg />
                </span>
              </div>
            </div>
            <div
              class="el-table-expandable-row"
            >
              <div
                class="el-table-expandable-container"
              >
                <div
                  class="el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-primary el-button"
                    >
                      Update
                      <div
                        class="el-button-loader"
                      />
                    </button>
                    <button
                      class="el-intent-danger el-button"
                    >
                      Deactivate
                      <div
                        class="el-button-loader"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Accounts should match a snapshot with no accounts 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-flex-auto el-flex-container"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <h1
            class="el-title"
          >
            Users
          </h1>
          <span
            class="el-mb5 el-icon-size-large el-icon"
          >
            <svg />
          </span>
          <h2
            class="el-subtitle"
          >
            Support
          </h2>
          <p
            class="el-has-grey-text el-small-text"
          >
            Your first step is to provision a user account for the solution using the button below.
          </p>
          <p
            class="el-has-grey-text el-small-text"
          >
            Please see also below for more resources amd assistance.
          </p>
          <button
            class="el-mb5 el-intent-primary el-button"
          >
            Provision User
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            View Docs
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            Video
            <div
              class="el-button-loader"
            />
          </button>
          <button
            class="el-mb5 el-intent-neutral el-button"
          >
            View Docs
            <div
              class="el-button-loader"
            />
          </button>
        </aside>
        <section
          class="el-page-container"
        >
          <h1
            class="el-title"
          >
            User Accounts
          </h1>
          <p
            class="el-has-grey-text el-body-text"
          >
            In order to access your organisations data warehouse, you must first create the user accounts to access it. You are to manage and create as many user accounts as you wish without any additional costs. We recommend that each individual user or application is provided with a unique set of credentials.
          </p>
          <p
            class="el-has-grey-text el-body-text"
          >
            Please note that creating the first user account is a long running process and can take several minutes to complete.
          </p>
          <h2
            class="el-subtitle"
          >
            User Account Details
          </h2>
          <div
            class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          >
            <div
              class="el-pn-icon"
              data-testid="close-icon"
            >
              <span
                class="el-icon"
              >
                <svg />
              </span>
            </div>
            <div
              class="el-pn-content"
            >
              No accounts yet provisioned for your organisation
            </div>
          </div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-flex-auto el-flex-container"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <h1
          class="el-title"
        >
          Users
        </h1>
        <span
          class="el-mb5 el-icon-size-large el-icon"
        >
          <svg />
        </span>
        <h2
          class="el-subtitle"
        >
          Support
        </h2>
        <p
          class="el-has-grey-text el-small-text"
        >
          Your first step is to provision a user account for the solution using the button below.
        </p>
        <p
          class="el-has-grey-text el-small-text"
        >
          Please see also below for more resources amd assistance.
        </p>
        <button
          class="el-mb5 el-intent-primary el-button"
        >
          Provision User
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          View Docs
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          Video
          <div
            class="el-button-loader"
          />
        </button>
        <button
          class="el-mb5 el-intent-neutral el-button"
        >
          View Docs
          <div
            class="el-button-loader"
          />
        </button>
      </aside>
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          User Accounts
        </h1>
        <p
          class="el-has-grey-text el-body-text"
        >
          In order to access your organisations data warehouse, you must first create the user accounts to access it. You are to manage and create as many user accounts as you wish without any additional costs. We recommend that each individual user or application is provided with a unique set of credentials.
        </p>
        <p
          class="el-has-grey-text el-body-text"
        >
          Please note that creating the first user account is a long running process and can take several minutes to complete.
        </p>
        <h2
          class="el-subtitle"
        >
          User Account Details
        </h2>
        <div
          class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            No accounts yet provisioned for your organisation
          </div>
        </div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
